[tool.poetry]
name = "quorapairs"
version = "0.1.0"
description = ""
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
fuzzywuzzy = "^0.18.0"
distance = "^0.1.3"
xgboost = "^2.1.1"
beautifulsoup4 = "4.9.3"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
